Bugfix: Fix the missing padding inside the searchbox

--- a/style.css
+++ b/style.css
@@ -237,9 +237,10 @@ span.search-help a:after {
 /* Desktop Searchbox */
 div#page aside#sidebar input[type=text] {                       /* Re-style the search bar */
     width: 13em;                                                /* Spite-filled redesigning initiated */
-    padding: 2px 0px;
+    padding: 2px 3px;
     border-radius: 4px 0 0 4px;
     border-right: 0;
+    box-sizing: border-box;
 }
 div#page aside#sidebar #search-box button[type=submit] {
     width: 2em;
@@ -272,9 +273,13 @@ div#c-posts aside#sidebar #tag-list h2 {                        /* Tags list - s
 }
 body.resp .mobile-search>.search-form>form .search-input input {
     border-radius: 4px 0 0 4px;
+    padding: 1px 3px;
+    box-sizing: border-box;
 }
 body.resp .mobile-search>.search-form>form .search-button>button {
     border-radius: 0 4px 4px 0;
+    padding: 2px 6px;
+    border-left: 1px solid #ccc;
 }
 
 
